WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133418
REGRESSION (
r169412
): Garbage pixels when vertical rubber-banding on
http://yvoschaap.com/pmarca/
https://bugs.webkit.org/show_bug.cgi?id=133418
Summary
REGRESSION (r169412): Garbage pixels when vertical rubber-banding on http://y...
Tim Horton
Reported
2014-05-30 23:45:41 PDT
<
rdar://problem/17065494
>
Attachments
patch
(6.82 KB, patch)
2014-05-31 00:26 PDT
,
Tim Horton
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-05-31 00:26:44 PDT
Created
attachment 232315
[details]
patch
WebKit Commit Bot
Comment 2
2014-05-31 00:27:42 PDT
Attachment 232315
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:3: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2014-05-31 07:13:49 PDT
Comment on
attachment 232315
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232315&action=review
> Source/WebCore/ChangeLog:3 > + REGRESSION (
r169412
): Garbage pixels when vertical rubber-banding on
http://yvoschaap.com/pmarca/
Tab?
Tim Horton
Comment 4
2014-05-31 23:27:45 PDT
http://trac.webkit.org/changeset/169512
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug